--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev-server": "nodemon --ignore dist/* --ignore src/* --ignore .cache/* --inspect --require dotenv/config server.js",
     "dev": "concurrently \"parcel watch src/index.html\" \"npm run dev-server\"",
     "server": "node --require dotenv/config server.js",
+    "start": "npm run server",
     "prebuild": "rimraf dist",
     "build": "parcel build src/index.html --no-source-maps  --public-url \".\"",
     "postbuild": "imagemin dist/* --out-dir=dist && workbox generateSW"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -39,9 +40,8 @@
     "passport-local-mongoose": "^5.0.1",
     "rate-limit-mongo": "^1.0.3",
     "rimraf": "^2.6.2",
-    "workbox-cli": "^3.2.0"
-  },
-  "dependencies": {
+    "workbox-cli": "^3.2.0",
+
     "random-number-in-range": "^1.0.2",
     "lodash": "^4.17.11",
     "random-color": "^1.0.1",
